<resources>
    <string name="app_name">PrivyNote</string>
    <string name="login_using_google_account">Login using google account</string>
    <string name="login_failed">Login failed</string>
    <string name="unexpected_type_of_credential">Unexpected type of credential</string>
    <string name="insert_error">Insert aborted due to conflict</string>
    <string name="update_error">Update aborted due to conflict</string>
    <string name="delete_error">Unable to delete note</string>
    <string name="delete_att_error">Unable to delete note</string>
    <string name="unknown_error">Unknown error</string>
    <string name="notes_title">Notes Title</string>
    <string name="notes_content">Notes Content</string>
    <string name="insert_your_pin">Insert your pin</string>
    <string name="pin_empty">Pin empty</string>
    <string name="add_new_note">Add new note</string>
    <string name="important">Important!</string>
    <string name="save_key_message">Store this encryption key in a place you believe is secure, and make sure no one else knows it. This key will be used to encrypt and decrypt your notes. If you lose this key, no one will be able to recover your notes.</string>
    <string name="copy_encryption_key">Copy encryption key</string>
    <string name="done">Done</string>
    <string name="insert_cipher_key">Insert cipher key</string>
    <string name="insert_key_message">The key is generated the first time you use the application. You should have already saved it somewhere you consider safe. The key looks like this:</string>
    <string name="cipher_key_sample">CM/dkuUPEmQKWAowdHlwZS5nb29nbGVhcGlzLmNvbS9nb29nbGUuY3J5cHRvLnRpbmsuQWVzR2Nt S2V5EiIaICcnFcxEMEo/c8zpa61k+xyOGNnt6gLiCzLZW9k+B0neGAEQARjP3ZLlDyAB</string>
    <string name="please_insert_cipher_key">Please insert cipher key first</string>
    <string name="unable_retrieve_key">Unable to retrieve key</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with">Login with :</string>
    <string name="register_success">Please check your email to verify, and come back here to login with the same email you\'ve registered :)</string>
    <string name="failed_to_send_verification_email">Failed to send verification email</string>
    <string name="user_creation_failed">User creation failed</string>
    <string name="please_verify_email">Please verify your email first!</string>
    <string name="submit">Submit</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="empty_uid">Empty uid</string>
    <string name="unable_add_note">Unable to add note</string>
    <string name="failed_to_sync_notes">Failed to sync notes : </string>
    <string name="delete">Delete</string>
    <string name="attachment_image">Attachment image</string>
    <string name="delete_attachment_button">Delete attachment</string>
    <string name="delete_button">Delete button</string>
    <string name="search_your_notes">Search your notes</string>
    <string name="minutes_ago">minute(s) ago</string>
    <string name="hours_ago">hour(s) ago</string>
    <string name="edited">Edited</string>
    <string name="just_now">just now</string>
    <string name="yesterday">yesterday</string>
    <string name="profile">Profile</string>
    <string name="general">General</string>
    <string name="theme">Theme</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="system">System</string>
    <string name="settings">Settings</string>
    <string name="log_out">Log out</string>
    <string name="change_app_theme">Change app theme</string>
    <string name="account">Account</string>
    <string name="app_protection">App Protection</string>
    <string name="use_biometric_to_decrypt_notes">Use biometric to decrypt notes</string>
    <string name="please_set_new_pin">Please set new pin</string>
    <string name="please_reenter_pin">Please re-enter pin</string>
    <string name="please_enter_pin">Please enter pin</string>
    <string name="you_are_not_authorized">You are not authorized</string>
    <string name="retry">Retry</string>
    <string name="biometric_authentication">Biometric Authentication</string>
    <string name="cancel">Cancel</string>
    <string name="two_factor_authentication">Two Factor Authentication</string>
    <string name="enable_disable_two_factor_authentication">Enable/disable two factor authentication</string>
    <string name="two_factor_secret_qr_code">Two factor secret qr code</string>
    <string name="two_fa_guide">Scan above QR Code to you authenticator app like Google Authenticator, Authy. Or copy code below manually</string>
    <string name="otp_guide">You have enabled two-factor authentication. Open the authenticator app you are using and enter the 6-digit code displayed</string>
    <string name="data">Data</string>
    <string name="backup_current_local_notes">Backup current local notes</string>
    <string name="backup">Backup</string>
    <string name="restore">Restore</string>
    <string name="restore_desc">Force restore notes to backed up state. This action will overwrite remote backup too</string>
    <string name="backup_msg">Back up stored at /Internal Storage/Documents/PrivyNotes</string>
    <string name="backup_failed_msg">Back up failed</string>
    <string name="restore_msg">Restore notes success</string>
    <string name="restore_failed_msg">Restore notes failed</string>
    <string name="create_an_account">Create an account</string>
    <string name="display_name">Display Name</string>
    <string name="register">Register</string>
    <string name="falsebt">False</string>
    <string name="truebt">True</string>
    <string name="instruction">Instruction</string>
    <string name="ok">OK</string>
    <string name="repeat_password">Repeat Password</string>
    <string name="password_correct">Password correct</string>
    <string name="password_doesnt_match">Password doesn\'t match</string>
    <string name="validation_email_success">Email is correct</string>
    <string name="validation_error_email">Wrong email format</string>
    <string name="validation_error_password_length">Password should have at least 6 character</string>
    <string name="weak_password">Weak password</string>
    <string name="medium_password">Medium password</string>
    <string name="strong_password">Strong password</string>
    <string name="validation_username_success">Username is correct</string>
    <string name="validation_error_username">Username should only contain character and number</string>
    <string name="empty_field">Field can\'t be empty</string>
    <string name="not_empty_field">Field is not empty</string>
    <string name="validation_success">Validation success</string>
    <string name="empty"> </string>
    <string name="strong_password_hint">Strong password = has more than one capital letters and special character</string>
    <string name="app_logo">App logo</string>
    <string name="welcome">Welcome :)</string>
    <string name="cant_reach_server">Can\'t reach server. Maybe check your connection?</string>
    <string name="request_timeout">Request timed out. Please try again later</string>
    <string name="network_error">Network error occurred. Please try again</string>
    <string name="backup_notes">Backup notes</string>
    <string name="restore_notes">Restore notes</string>
    <string name="otp_input_field">OTP input field</string>
    <string name="app_pin_input_field">App pin input field</string>
    <string name="encryption_key_sample">Encryption key sample</string>
    <string name="add_attachment">Add attachment</string>

    <string name="greeting_message">
    <![CDATA[
    <b>Welcome to PrivyNote!</b><br><br>
    <p>Hi there! Thanks for choosing <b>PrivyNote</b>, an app that started as a passion project to bring you secure note-taking with cutting-edge encryption.</p>
    <p>Your data is encrypted using <b>XChaCha20-Poly1305</b>, a modern algorithm recognized for its strong security and resilience—even against potential future quantum computing threats.</p>
    <p><b><span style="color:red;">Important:</span></b> This app will provide you with a <b>unique decryption key</b> to access your encrypted notes. <b>Please save this key somewhere safe</b>, such as in a reliable password vault app. Without it, your notes cannot be recovered, and we will not be able to assist in retrieving them.</p>
    <p><span style="color:red;"><i>The security of your data depends on the <b>XChaCha20-Poly1305 algorithm</b> and how securely you store your key. I cannot guarantee the security of your data!</i></span></p>
    <p>Thank you for trusting <b>PrivyNote</b>. Happy note-taking!</p>
    ]]>
    </string>


    <string name="greeting">Greeting</string>
    <string name="agree">Agree</string>
    <string name="show_formatting_control">Show formatting control</string>
    <string name="format_header_1">Format header 1</string>
    <string name="format_header_2">Format header 2</string>
    <string name="format_header_3">Format header 3</string>
    <string name="format_header_4">Format header 4</string>
    <string name="format_header_5">Format header 5</string>
    <string name="format_header_6">Format header 6</string>
    <string name="format_align_left">Format align left</string>
    <string name="format_align_right">Format align right</string>
    <string name="format_align_justify">Format align justify</string>
    <string name="format_align_center">Format align center</string>
    <string name="format_bold">Format bold</string>
    <string name="format_italic">Format italic</string>
    <string name="format_underline">Format underline</string>
    <string name="format_strikethrough">Format strikethrough</string>
    <string name="format_subscript">Format subscript</string>
    <string name="format_superscript">Format superscript</string>
    <string name="format_quote">Format quote</string>
    <string name="format_text_color">Format text color</string>
    <string name="format_background_color">Format background color</string>
    <string name="clear_formatting">Clear Formatting</string>
    <string name="undo">Undo</string>
    <string name="redo">Redo</string>
    <string name="delete_note_button">Delete note button</string>
    <string name="push_notification">"Push Notification"</string>
    <string name="auto_backup">Auto Backup</string>
    <string name="enable_mi_autostart">Please enable autostart to allow automatic backup to run properly.</string>
    <string name="disable_optimization_message">Please disable battery optimization to allow automatic backup to run properly. Press cancel if it\'s already disabled.</string>
    <string name="unable_to_open_battery_saver_settings">Please disable Battery Saver to allow automatic backup to run properly.</string>
    <string name="backup_interval">Backup interval</string>
    <string name="everyday">Everyday</string>
    <string name="_3_days">3 Days</string>
    <string name="_7_days">7 Days</string>
    <string name="backup_complete">Backup Complete!</string>
</resources>
